# AgentNucleus

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: agentctl.cpp  agentd.cpp  model_smoke.cpp
examples/: ipc_demo.cpp  pipeline_demo.cpp
include/agent_runtime/: agent_runtime.h  cgroup_manager.h  control_channel.h  control_protocol.h  model_engine.h  process_executor.h  resource_monitor.h  runtime.h  scheduler.h  shared_memory.h  types.h
src/: cgroup_manager.cpp  control_channel.cpp  control_protocol.cpp  model_engine.cpp  process_executor.cpp  resource_monitor.cpp  runtime.cpp  scheduler.cpp  shared_memory.cpp
tests/: control_plane_test.cpp  control_protocol_test.cpp  process_test.cpp  scheduler_test.cpp  shared_memory_test.cpp
